# project_template

./: .gitignore  CMakeLists.txt  MANIFEST.in  README  __init__.py  example.cpp  pyproject.toml  setup.py  test.py
.github/actions/setup-dependency/: action.yml
.github/workflows/: build.yml  github-actions-demo.yml  release-build.yml  template-python-build-release.yml  template-release-build.yml  test-action-setup-dependency.yml  test-template-release-build.yml  test_setup_dependency.yml
core/: function.cp311-win_amd64.pyd  function.exp  function.lib
core/add/: CMakeLists.txt
geodesy.egg-info/: PKG-INFO  SOURCES.txt
include/: add.h  class_cat.h  struct_test.h
pybindStudy/: README  __init__.py
pybindStudy/Cplus/: CMakeLists.txt  main.cpp  setup.py
pybindStudy/Cplus/include/: class_cat.h  struct_test.h
pybindStudy/Cplus/source/: CMakeLists.txt
pybind_study.egg-info/: PKG-INFO  SOURCES.txt
scripts/: download_URLS_files.sh  readme.md  test.sh
source/: CMakeLists.txt  class_cat.cpp  import_test.py  setup.cpp  setup.py  setup_pybind.py  struct_test.cpp
src/: CMakeLists.txt  README  binding.cpp  class_cat.cpp  function.cp311-win_amd64.pyd  main.cpp  setup.cpp  setup.py  setup_pybind.py  struct_test.cpp
test1.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
